Bug 1864319 - Always show the scrollbar to avoid the layout change depending on the content.

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -17,7 +17,9 @@ body {
 }
 
 .th-global-content {
-  overflow-y: auto;
+  /* Always show the scrollbar to avoid the layout change
+   * depending on the content */
+  overflow-y: scroll;
   overflow-x: hidden;
   height: 100%;
 }
